<resources>
    <string name="app_name">Parle</string>
    <string name="todo">TODO</string>
    <string name="get_started">Get started</string>
    <string name="blank">""</string>

    <!--    Splash activity-->
    <string name="splashToast">First time, welcome</string>

    <!--    Login activity-->
    <string name="welcomeBack">Hi! Welcome Back.</string>
    <string name="loginMessage">Kindly log in to begin</string>
    <string name="email">E-mail</string>
    <string name="password">Password, minimum of 6 characters</string>
    <string name="password_login">Password</string>
    <string name="anonymous">Remain Anonymous</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="noAccount">Don’t have an account?</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="enterDetails">Enter all user details</string>
    <string name="loginError">Login unsuccessful</string>

    <!--    Signup activity-->
    <string name="appWelcome">Welcome to Parle</string>
    <string name="signupMessage">It’s time to take your first step to LETTING IT GO!</string>
    <string name="fullName">Full name</string>
    <string name="username">Username</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="createAccount">Create Account</string>
    <string name="haveAccount">Already have an account?</string>
    <string name="passwordMismatch">Text in confirm password box not the same as text in password box </string>
    <string name="signupError">Sign up unsuccessful</string>
    <string name="pin">PIN</string>
    <string name="gender">Gender</string>

    <!--    Details activity-->
    <string name="detailsHeading">Personal Details</string>
    <string name="detailsSubHeading">Kindly fill in these details to enable us serve you better</string>
    <string name="residence">Residence</string>
    <string name="countryRes">Country of residence</string>
    <string name="state">State</string>
    <string name="dob">Date of Birth</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="spiritBased">Would you like a spiritual based couselling?</string>
    <string name="similarCounsellor">Would you like a Counsellor with a similar Religion</string>
    <string name="counsellorFaith">Can you counsel based on your faith?</string>
    <string name="faith">Faith and Religion</string>
    <string name="denomination">Denomination</string>
    <string name="religion">Religion</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--    Concentrate activity-->
    <string name="concentrateHeading1">What would you like to concentrate on?</string>
    <string name="concentrateHeading2">Select your Area of Expertise</string>
    <string name="concentrateSubHeading">You can select as many as possible.</string>
    <string name="depression">Depression</string>
    <string name="stress">Stress and Anxiety</string>
    <string name="addiction">Coping with addictions</string>
    <string name="family">Family issues</string>
    <string name="trauma">Trauma and Abuse</string>
    <string name="relationship">Relationship issues</string>
    <string name="sexuality">Sexuality issues</string>
    <string name="grief">Coping with grief and loss</string>
    <string name="eating">Eating Disorder</string>
    <string name="sleeping">Sleeping Disorder</string>
    <string name="fatigue">Fatigue</string>
    <string name="anger">Anger Management</string>
    <string name="career">Career Choices</string>
    <string name="bipolar">Bipolar Disorder</string>
    <string name="adhd">Concentration, memory and focus (ADHD)</string>
    <string name="life">Life changes</string>
    <string name="parenting">Parenting issues</string>


    <!--    Pin activity-->
    <string name="pinHeading">Pin for Security</string>
    <string name="pinSubHeading">We want you to be extra secured! You would be reqired to Enter pin for sessions with counsellor .</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="createPin">PIN successfully created</string>
    <string name="validatePin">PIN successfully validated</string>
    <string name="invalidPin">Invalid PIN</string>

    <!--    Profile fragment-->
    <string name="logout">Successfully logged out</string>
    <string name="logoutButton">Log out</string>
    <string name="profile_header">Profile</string>
    <string name="anon_name">Anon name:</string>
    <string name="save_changes">SAVE CHANGES</string>

    <!-- Start Screen Fragments -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selected">selected</string>
    <string name="advicePage2">Don\'t keep holding it in!</string>
    <string name="advicePage3">Our Counsellors are here to help you.</string>
    <string name="advicePage1">"We know you have a lot  running through your mind"</string>
    <string name="hi">Hi</string>
    <string name="welcomeHome">Welcome to your safe place</string>
    <string name="suggestedCounsellors">Suggested Counselors</string>
    <string name="select_profile">Select to view profile and start session</string>
    <string name="latest_articles">Latest Articles</string>
    <string name="view_all">View All</string>
    <string name="sample_fullname">Bukunmi Shonde</string>

    <!--    Fragment counselors-->
    <string name="counselors">Counselors</string>
    <string name="enter_counselor_name">Enter counselor\'s name</string>
    <string name="edit_challenge">EDIT\nCHALLENGE</string>
    <string name="chats">CHATS</string>

    <!--    Fragment Chats-->
    <string name="suggestedCounselorsCaps">SUGGESTED COUNSELORS</string>


    <!--    Fragment Articles-->
    <string name="articles_heading">Articles</string>
    <string name="article_quote">Whenever you read a good book, somewhere in the world a door opens to allow in more light</string>
    <string name="search_articles">Search Articles</string>
    <string name="sample_first_name">Osarumense</string>
    <string name="sample_article_heading">Cyber Bullying and how to handle it</string>
    <string name="sample_writer">Osarumense Azamegbe</string>


    <!-- Selection Activity-->
    <string name="selection_page_subheading">Kindly choose the appropriate category</string>
    <string name="selection_page_heading">You are a...</string>
    <string name="student">Student</string>
    <string name="counselor">Counselor</string>
    <string name="home">Home</string>
    <string name="details_update_succesful">Details Updated Successfully</string>
    <string name="unable_to_update_details">Unable to update details, Check your network and try again</string>
    <string name="please_enter_all_details">Please enter all details before moving forward</string>


    <!--Expandable list adapter-->
    <string-array name="expandableListStudents">
        <item>Personal Details</item>
        <item>Contact and Location</item>
        <item>Faith and Religion</item>
    </string-array>

    <string-array name="expandableListCounsellors">
        <item>Personal Details</item>
        <item>Contact and Location</item>
        <item>Faith and Religion</item>
        <item>Duration</item>
        <item>Credentials and CV</item>
    </string-array>

    <string-array name="religions_list">
        <item>Christianity</item>
        <item>Islam</item>
        <item>Others</item>
    </string-array>

    <string-array name="yes_or_no_list">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="counselor_preference_list">
        <item>Yes I would like that</item>
        <item>No, I would prefer to keep our sessions clinical</item>
    </string-array>

    <!--Concentrate Activity-->
    <string-array name="concentrate_points_list">
        <item>Depression</item>
        <item>Stress and Anxiety</item>
        <item>Coping with Addictions</item>
        <item>Anxiety</item>
        <item>Family Issues</item>
        <item>Trauma and abuse</item>
        <item>Relationship issues</item>
        <item>Sexuality issues</item>
        <item>Coping with grief and loss</item>
        <item>Eating disorder</item>
        <item>Sleeping disorder</item>
        <item>Motivation, self esteem and confidence</item>
        <item>Fatigue</item>
        <item>Anger Management</item>
        <item>Career choices</item>
        <item>Bipolar disorder</item>
        <item>Concentration, memory and focus (ADHD)</item>
        <item>Executive and Professional Coaching</item>
        <item>Life Changes</item>
        <item>Parenting Issues</item>
    </string-array>

    <!--Details Activity-->
    <string-array name="genders_list">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>


    <!--Counselor Signup activity-->
    <string name="counselor_signup_message">Thank you for volunteering</string>
    <string name="can_you_do_spiritual_counsel">Can you counsel based on your faith?</string>
    <string name="duration">Duration</string>
    <string name="counseling_experience">Years of experience in counseling</string>
    <string name="available_hours">Available hours per day</string>
    <string name="start_time">Start time</string>
    <string name="profession">Profession</string>
    <string name="requested_sessions">Requested Sessions</string>
    <string name="upload_article">Upload Article</string>


    <string-array name="yearsOfExperience">
        <item> Less than a year</item>
        <item> 1 year</item>
        <item>2 years</item>
        <item>3 years</item>
        <item>Over 3 years</item>
    </string-array>

    <string-array name="availableHours">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
        <item>7 hours</item>
        <item>8 hours</item>
    </string-array>

    <string name="none_selected">none selected</string>
    <string name="hours">hours</string>
    <string name="unableToGetCounsellors">Unable to get the List of counsellors. Please check your network and try again</string>
    <string name="counselor_profile">Counsellors\'s profile</string>
    <string name="online">Online</string>
    <string name="specialties">Specialties</string>
    <string name="book_as_counsellor">Book as Counsellor</string>
    <string name="counsellors_limit">Note that you cannot have more than 3 counsellors at once</string>
    <string name="type_a_message">Type a message</string>
    <string name="session_with">Session with</string>
    <string name="urgent">Urgent</string>
    <string name="edit_aoe">EDIT AREA OF EXPERTISE</string>


</resources>